--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .app{max-width:640px;margin:0 auto;min-height:100%;display:flex;flex-direction:column}
     header{position:sticky;top:0;background:var(--card);padding:14px 16px;border-bottom:1px solid #eee;display:flex;align-items:center;gap:10px;box-shadow:0 8px 20px rgba(0,0,0,.08);z-index:9999;}
     header h1{font-size:1.25rem;margin:0;font-weight:700;letter-spacing:.2px}
-    .chip{margin-left:auto;display:flex;align-items:center;gap:8px;background:#eef3fd;color:#1a73e8;padding:8px 12px;font-weight:600; cursor:pointer}
+    .chip{margin-left:auto;display:flex;align-items:center;gap:8px;background:#eef3fd;color:#1a73e8;padding:8px 12px;font-weight:600; cursor:pointer transition: background-color .18s ease, color .18s ease; }
     .grid{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;padding:0}
     .card{cursor:pointer;background:var(--card);border:1px solid #eee;padding:16px;display:flex;flex-direction:column;gap:12px;aspect-ratio:1/1;justify-content:center;position:relative;min-width:0; }
     .product{display:flex;align-items:center;justify-content:center;width:100%;height:100%;text-align:center}
@@ -69,6 +69,13 @@
     .menu-list{display:flex;flex-direction:column;gap:10px}
     .menu-list .btn{width:100%; text-align:left}
 
+  
+    /* Flash overlay when entering subtract mode */
+    .flash{position:fixed;inset:0;background:#ea4335;opacity:0;pointer-events:none;transition:opacity .18s ease;z-index:9998;}
+    .flash.show{opacity:.28;}
+
+  
+    .chip.sub{ background:#fde9ea; color:#ea4335; }
   </style>
 </head>
 <body>
@@ -77,7 +84,7 @@
       <button id="menuBtn" class="menu-btn" aria-label="Menu" title="Menu">☰</button>
       <h1>Raport Dzienny</h1>
       <span id="today" class="pill">--</span>
-      <span class="chip" id="modeToggle" role="button" tabindex="0" title="Przytrzymaj, aby włączyć odejmowanie (PIN opcjonalny). Kliknij, aby wrócić do dodawania.">
+      <span class="chip" id="modeToggle" role="button" tabindex="0" title="Kliknij, aby przełączyć tryb (odejmowanie wymaga PIN, jeśli ustawiony).">
         <span id="modeLabel">Tryb: Dodawanie</span>
       </span>
     </header>
@@ -224,7 +231,7 @@
   </script>
 
   <script>
-    const APP_VERSION = '1.0.4';
+    const APP_VERSION = '1.0.7';
 
     // --- Keys ---
     const LS_PRODUCTS = 'sc_products_v1';
@@ -333,6 +340,7 @@
     function updateModeUI(){
       $('#modeLabel').text(mode === 'add' ? 'Tryb: Dodawanie' : 'Tryb: Odejmowanie')
         .toggleClass('badge add', mode==='add').toggleClass('badge sub', mode==='sub');
+      $('#modeToggle').toggleClass('sub', mode==='sub');
     }
 
     function bump(id){
@@ -419,6 +427,14 @@
       window.__resetTimer = setInterval(tick, 10*1000);
     }
 
+    function flashSub(){
+      var el = document.getElementById('flash');
+      if(!el) return;
+      el.classList.add('show');
+      clearTimeout(window.__flashTimer);
+      window.__flashTimer = setTimeout(function(){ el.classList.remove('show'); }, 260);
+    }
+
     // --- PWA Install ---
     let __deferredPrompt = null;
     function isStandalone(){
@@ -446,21 +462,23 @@
       if('serviceWorker' in navigator){ navigator.serviceWorker.register('./sw.js'); }
       if(isStandalone()){ $('#installBtn').hide(); }
 
-      // mode toggle on chip (hold to enable subtract)
-      $(document).on('mousedown touchstart', '#modeToggle', function(){
-        if(mode === 'sub'){ mode = 'add'; updateModeUI(); return; }
-        holdTimer = setTimeout(()=>{
-          const saved = localStorage.getItem(LS_PIN) || '';
-          if(!saved || prompt('Podaj PIN, aby włączyć odejmowanie:') === saved){ mode='sub'; updateModeUI(); }
-          else { alert('Nieprawidłowy PIN.'); }
-        }, 1000);
-      }).on('mouseup mouseleave touchend touchcancel', '#modeToggle', function(){ clearTimeout(holdTimer); });
+      // mode toggle on chip (click to toggle; PIN required when entering odejmowanie)
+$(document).on('click', '#modeToggle', function(){
+  if(mode === 'add'){
+    const saved = localStorage.getItem(LS_PIN) || '';
+    if(!saved || prompt('Podaj PIN, aby włączyć odejmowanie:') === saved){ mode='sub'; updateModeUI(); flashSub(); }
+    else { alert('Nieprawidłowy PIN.'); }
+  } else {
+    mode = 'add'; updateModeUI();
+  }
+});
 
-      // keyboard access for chip
+// keyboard access for chip
       $(document).on('keydown', '#modeToggle', function(e){
-        if(e.key === 'Enter'){ if(mode === 'sub'){ mode='add'; updateModeUI(); } }
-        if(e.key === ' '){ e.preventDefault(); const ev = new Event('mousedown'); this.dispatchEvent(ev); }
-      });
+  if(e.key === 'Enter' || e.key === ' '){
+    e.preventDefault(); $('#modeToggle').trigger('click');
+  }
+});
 
       // product tap
       $(document).on('click', '.product-card', function(){ const id = $(this).data('id'); bump(id); });
@@ -618,5 +636,6 @@
       reader.readAsText(file);
     }
   </script>
+  <div id="flash" class="flash" aria-hidden="true"></div>
 </body>
 </html>
